# idol-agency-maker

./: .env.example  .gitignore  CLAUDE.md  package.json  playwright.config.ts  svelte.config.js
design/: analise-atributos-fm26-vs-idol-agency.md  gap-analysis.md  route-mapping.md
docs/: adoption-plan-2026-04-07.md  implementation-plan.md
src-tauri/: tauri.conf.json
src/lib/: index.ts
supabase/: README.md
tools/: README.md  pyproject.toml
tools/idol-pipeline/: README.md  llm_enrich.py  llm_enrich_agencies.py  merge_enriched.py
tools/idol-pipeline/output/: agencies_enriched.json  agencies_skeleton.json  enriched_sidecar.json  enriched_test1.json  idols_merged.json  skeleton_mvp50.json
tools/idol-pipeline/schemas/: enriched_sidecar.schema.json  idol_enriched.schema.json
tools/portrait-gen/: README.md  batch_queue.py  comfyui_runner.py  generate_mvp_gemini.py  generate_prompts.py  manifest.example.json  orchestrate_mvp_idols.py  resize_compress.py  upload_to_supabase.mjs
tools/portrait-gen/output/: smoke_batch.json
tools/portrait-gen/output/_orch_test/: character_sheets.json  mvp_portrait_manifest.json  prompts_batch.json
tools/portrait-gen/output/portraits/: manifest.json
tools/runpod/: start-pod.mjs  stop-pod.mjs
tools/world_pack/: README.md  balance_personality.py  balance_report.py  balance_targets.yaml  generate_agencies_skeleton.py  generate_idols_stratified.py  generate_world_npcs.py  generate_world_pack.py  pyproject.toml  stats_rules.py  tier_quotas.py
tools/world_pack/sample/: rivals_50.seed42001.json  world_npcs_small.seed42001.json
(+331 files in other folders)
