[project]
name = "star-idol-agency-tools"
version = "0.1.0"
description = "Offline tooling: world pack generator, ComfyUI orchestrator, balance sim (Python)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["ruff>=0.8.0", "pytest>=8.0.0"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
